--- a/sample/style.css
+++ b/sample/style.css
@@ -1,10 +1,4 @@
-html,body{
-  overflow: hidden
+p.touch_action_none{
+  padding: 30px 0;
+  touch-action: none;
 }
-// スクロールを無効にする
-$(window).on('touchmove.noScroll', function(e) {
-    e.preventDefault();
-});
-
-// スクロール無効を解除する
-$(window).off('.noScroll');
