--- a/sample/style.css
+++ b/sample/style.css
@@ -1,6 +1,9 @@
-.mainview{...}
+body {
+	touch-action: none;
+}
 
-p.touch_action_none{
-  padding: 5px 0;
+h1.touch_action_none{
+  padding: 30px 0;
   touch-action: none;
 }
+
