--- a/sounds-multi.css
+++ b/sounds-multi.css
@@ -19,7 +19,23 @@
 	text-align: center ;
 	text-decoration: none ;
 }
-
+.flex{
+  padding: 2.5% 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.flex > *{
+  min-width: 8%;
+  flex-basis: 25%;
+  background: #fff;
+  font-size: 64px;
+  text-align: center;
+}
+.flex,
+.flex > *{
+  border: 3px solid #aaa;
+}
 
 body {
 	touch-action: none;
