--- a/sounds-multi.css
+++ b/sounds-multi.css
@@ -8,30 +8,32 @@
 	display: block ;
 
 	width: 90% ;
-	max-width: 100px ;
+	max-width: 180px ;
 	margin: 15px ;
 	padding: 30px 0 ;
 	border-radius: 4px ;
 
 	color: rgb(255, 255, 255) ;
-	font-weight: 700 ;
-	background: #D36015 ;
+	font-weight: 500 ;
+	background: #1518d3 ;
 	text-align: center ;
 	text-decoration: none ;
 }
 .flex{
-  padding: 2.5% 0;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-.flex > *{
-  min-width: 8%;
-  flex-basis: 25%;
-  background: #fff;
-  font-size: 64px;
-  text-align: center;
-}
+	padding: 2.5% 0;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+  }
+  .flex > *{
+	min-width: 0%;
+	flex-basis: 25%;
+	background: rgb(255, 255, 255);
+	font-size: 20px;
+	text-align: center;
+  }
+  
+  
 
 body {
 	touch-action: none;
@@ -41,3 +43,4 @@ h1.touch_action_none{
   padding: 30px 0;
   touch-action: none;
 }
+
